[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Inter-SemiBold-slnt=0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/EscapeMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.28, 0.525, 0.7, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.28, 0.525, 0.7, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.360784, 0.67451, 0.898039, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.172549, 0.203922, 0.247059, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.215686, 0.243137, 0.286275, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.321569, 0.364706, 0.431373, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = null
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 1 )
Panel/styles/panel = SubResource( 4 )
PanelContainer/styles/panel = SubResource( 4 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = SubResource( 5 )
TooltipPanel/styles/panel = SubResource( 6 )
VSeparator/constants/separation = 4
VSeparator/styles/separator = SubResource( 7 )

[node name="EscapeMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 220.0
theme = SubResource( 9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 300.0
margin_bottom = 420.0
custom_constants/margin_right = 30
custom_constants/margin_top = 0
custom_constants/margin_left = 30
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_right = 270.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 240.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 55 )
text = "RESUME"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 240.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 55 )
text = "RESTART"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 240.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 55 )
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 240.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 55 )
text = "MAIN MENU"
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
